# Gold-Rush-Alaska-AI-Powered-Board-Game

./: Bear.cpp  Bear.h  CMakeLists.txt  Element.cpp  Element.h  Food.cpp  Food.h  Gold.cpp  Gold.h  Grid.cpp  Grid.h  MedicalSupplies.cpp  MedicalSupplies.h  Player.cpp  Player.h  README.md  WildAnimal.cpp  WildAnimal.h  Wolf.cpp  Wolf.h  Wood.cpp  Wood.h  main.cpp
