cmake_minimum_required(VERSION 3.30)
project(untitled4)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled4
        main.cpp
        Grid.cpp
        Player.cpp
        Element.cpp
        Food.cpp
        Wood.cpp
        Bear.cpp
        Gold.cpp
        MedicalSupplies.cpp
        WildAnimal.cpp
        Wolf.cpp
)
